fix: Map.copyOf() 사용으로 방어적 복사 적용